objects/Assignment_of_Interest__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assignments of Interests</relationshipLabel>
        <relationshipName>Assignments_of_Interests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignee_Is_An_Entity_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assignee Is An Entity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignee_Is_An_Entity_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assignee Is An Entity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignee_Is_An_Entity_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assignee Is An Entity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignee_Membership_Percent_1_1__c</fullName>
        <label>Assignee Membership Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assignee_Membership_Percent_1_2__c</fullName>
        <label>Assignee Membership Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assignee_Membership_Percent_1_3__c</fullName>
        <label>Assignee Membership Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assignee_Name_1_2__c</fullName>
        <label>Assignee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignee_Name_1_3__c</fullName>
        <label>Assignee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignee_Name_1__c</fullName>
        <label>Assignee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignee_Name_2_1__c</fullName>
        <label>Assignee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_of_Interest_Form__c</fullName>
        <description>##Conga created button:00b4P000001FO5K</description>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;bml=Generating Assignment Of Interest Form&quot; + 
&quot;&amp;ofn=&quot; + Name +
&quot;&amp;templateid=&quot; + Conga_Template_Selection__c +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <label>Assignment of Interest Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_of_Interest_Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assignment of Interest Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignment_of_Interest_Trigger__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;bml=Generating Assignment Of Interest Form&quot; + 
&quot;&amp;ofn=&quot; + Name +
&quot;&amp;templateid=&quot; + Conga_Template_Selection__c +
&quot;&amp;ac0=1&quot; +
&quot;&amp;sc0=1&quot; +
&quot;&amp;sc1=SalesforceFile&quot; +
&quot;&amp;ContentNetworkID=&quot; + Network_ID_Of_User__c +
&quot;&amp;qmode=SalesforceFile&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assignment of Interest Trigger</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignor_1_Membership_Percent__c</fullName>
        <label>Assignor Membership Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assignor_2_1_Membership_Percent__c</fullName>
        <label>Assignor Membership Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assignor_2_2_Membership_Percent__c</fullName>
        <label>Assignor Membership Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assignor_3_1_Membership_Percent__c</fullName>
        <label>Assignor Membership Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assignor_Is_An_Entity_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assignor Is An Entity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignor_Is_An_Entity_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assignor Is An Entity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignor_Is_An_Entity_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assignor Is An Entity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assignor_Name_1__c</fullName>
        <label>Assignor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignor_Name_2_1__c</fullName>
        <label>Assignor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignor_Name_2_2__c</fullName>
        <label>Assignor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignor_Name_3_1__c</fullName>
        <label>Assignor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Template_Selection__c</fullName>
        <formula>IF(Number_of_Interest_Changes_Submitted__c = 1,
CASE(TEXT(Number_of_Members_receiving_interest__c),
&quot;1&quot;, &quot;a0z4P00000GTG7z&quot;,
&quot;2&quot;,&quot;a0z4P00000GTHbg&quot;,
&quot;3&quot;, &quot;a0z4P00000GTHbl&quot;,
NULL),
NULL)

&amp;

IF(Number_of_Interest_Changes_Submitted__c = 2,
CASE(TEXT(Number_of_Members_receiving_interest__c),
&quot;1&quot;, &quot;a0z4P00000GTHbq&quot;,
&quot;2&quot;,&quot;a0z4P00000GTHbv&quot;,
&quot;3&quot;, &quot;a0z4P00000GTHc0&quot;,
NULL),
NULL)

&amp;

IF(Number_of_Interest_Changes_Submitted__c = 3,
CASE(TEXT(Number_of_Members_receiving_interest__c),
&quot;1&quot;, &quot;a0z4P00000GTHc5&quot;,
&quot;2&quot;,&quot;a0z4P00000GTHcA&quot;,
&quot;3&quot;, &quot;a0z4P00000GTHcF&quot;,
NULL),
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Template Selection</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entity_Assignee_Org_State_1__c</fullName>
        <label>Entity Assignee Org State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Assignee_Org_State_2__c</fullName>
        <label>Entity Assignee Org State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Assignee_Org_State_3__c</fullName>
        <label>Entity Assignee Org State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Assignee_Signer_1__c</fullName>
        <label>Entity Assignee Signer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Assignee_Signer_2__c</fullName>
        <label>Entity Assignee Signer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Assignee_Signer_3__c</fullName>
        <label>Entity Assignee Signer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Assignee_Title_1__c</fullName>
        <label>Entity Assignee Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Assignee_Title_2__c</fullName>
        <label>Entity Assignee Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Assignee_Title_3__c</fullName>
        <label>Entity Assignee Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Assignee_Type_1__c</fullName>
        <label>Entity Assignee Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Assignee_Type_2__c</fullName>
        <label>Entity Assignee Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Assignee_Type_3__c</fullName>
        <label>Entity Assignee Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Assignor_Org_State_1__c</fullName>
        <label>Entity Assignor Org State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Assignor_Org_State_2__c</fullName>
        <label>Entity Assignor Org State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Assignor_Org_State_3__c</fullName>
        <label>Entity Assignor Org State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Assignor_Signer_1__c</fullName>
        <label>Entity Assignor Signer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Assignor_Signer_2__c</fullName>
        <label>Entity Assignor Signer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Assignor_Signer_3__c</fullName>
        <label>Entity Assignor Signer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Assignor_Title_1__c</fullName>
        <label>Entity Assignor Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Assignor_Title_2__c</fullName>
        <label>Entity Assignor Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Assignor_Title_3__c</fullName>
        <label>Entity Assignor Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Assignor_Type_1__c</fullName>
        <label>Entity Assignor Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Assignor_Type_2__c</fullName>
        <label>Entity Assignor Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Assignor_Type_3__c</fullName>
        <label>Entity Assignor Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Business_Purpose__c</fullName>
        <formula>TEXT(Entity__r.Business_Purpose_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Business Purpose</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Structure__c</fullName>
        <formula>TEXT(Entity__r.Structure__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Structure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Tax_Status__c</fullName>
        <formula>TEXT(Entity__r.Tax_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Tax Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>Assignments of Interests</relationshipLabel>
        <relationshipName>Assignments_of_Interests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_Member_Count__c</fullName>
        <formula>Entity__r.Conga_Member_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LLC Member Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_for_Communities__c</fullName>
        <formula>&quot;https://platinum.force.com/aba/s/detail/&quot;+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link for Communities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_ID_Of_User__c</fullName>
        <formula>CASE( $Profile.Id,
&quot;00e4P000000ydyf&quot;, &quot;0DB4P000000fyj5WAA&quot;,
&quot;00e6f000000SF39&quot;, &quot;0DB6f000000TOB3GAO&quot;,
&quot;00e6f000001IzW2&quot;, &quot;0DB4P000000fyoUWAQ&quot;,
&quot;00e6f000001IzWR&quot;, &quot;0DB6f000000TOAoGAO&quot;, 
&quot;00e6f000001IzVi&quot;, &quot;0DB6f000000TOAjGAO&quot;, 
&quot;00e6f000000SF2a&quot;, &quot;0DB4P000000fykrWAA&quot;, 
&quot;00e6f000001IzWb&quot;, &quot;0DB6f000000TOAtGAO&quot;, 
&quot;00e6f000000SF2u&quot;, &quot;0DB4P000000fykwWAA&quot;, 
&quot;00e6f000001IzWW&quot;, &quot;0DB4P000000fyojWAA&quot;, 
&quot;00e6f000000SEzv&quot;, &quot;0DB4P000000fyj0WAA&quot;, 
&quot;00e6f000000SF2k&quot;, &quot;0DB4P000000fyn7WAA&quot;,
&quot;0DB0B0000004EF4WAM&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Network ID Of User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Interest_Changes_Submitted__c</fullName>
        <label>Number of Members reassigning interest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Members_receiving_interest__c</fullName>
        <label>Number of Members receiving interest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_Date__c</fullName>
        <formula>TEXT(Entity__r.Organizational_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_State__c</fullName>
        <label>Organization State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Assignment of Interest</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assignment of Interest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignments of Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>